--- a/dom-box/css/style.css
+++ b/dom-box/css/style.css
@@ -1,10 +1,15 @@
 @import "https://fonts.googleapis.com/css?family=Oswald";
-html, body {
+
+
+
+
+body {
   background: url(../images/ape.jpg) bottom center;
   background-size: 41%;
   background-repeat: repeat;
+  width: 100%;
+  height: 100%;
   /*background: linear-gradient(to left, #fd746c, #ff9068);*/
-
   font-family: 'Oswald', sans-serif;
 }
 
@@ -20,15 +25,17 @@ h1 {
 .pad {
   align-self: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 50%;
 }
 
 .box {
 
-  width: 200px;
+  width: 80%;
   height: 75px;
   margin: 20px;
   box-shadow: 0 8px 11px -6px #423a3a;
